Use enums Add vector-specific benchmark